--- a/flask/modulo02/templates/index02.html
+++ b/flask/modulo02/templates/index02.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }} - HTML </title>
+    <link rel="stylesheet" href="{{ url_for('static',     filename='css/index02.css') }}">
 </head>
 <body>
     <h1> Alo Mundo Flask - index02.html</h1>
