--- a/flask/modulo08-Restaurante/templates/login.html
+++ b/flask/modulo08-Restaurante/templates/login.html
@@ -10,8 +10,7 @@
             <p>Faça login para gerenciar seu restaurante.</p>
         </div>
         <!-- Após o login seguirá para a página de mapa de mesas -->
-        <form class="login-form" action="{{ url_for('mapa_mesas') }}" method="GET" onsubmit="return validarLogin();">
-     
+        <form class="login-form" action="{{ url_for('home') }}" method="GET" onsubmit="return validarLogin();">
             <div class="input-group">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
                 <input type="text" id="username" name="username" placeholder="Usuário" required>
