--- a/flask/modulo08-Restaurante/templates/home.html
+++ b/flask/modulo08-Restaurante/templates/home.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block title %}Painel de Controle{% endblock %}
 
-{% block content %}
+<!-- In Flask, {% block content %} is a Jinja2 templating construct used for template inheritance. This mechanism allows for the creation of a base template (often named base.html or layout.html) that defines the overall structure and common elements of a web page, such as the HTML boilerplate, header, footer, and navigation.  -->
+{% block content %} 
 <!-- 
 Agindo como um webdesigner, peço para criar 
 Criar uma página home que contenha um cabeçalho, um título, um carrossel com imagens e um link para as funcionalidades do Backlog.
