--- a/flask/modulo10/templates/login.html
+++ b/flask/modulo10/templates/login.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
 <body>
-    <h1>Login - login.html</h1>
-    <form method="POST" action="{{ url_for('login') }}">
-        <label for="username">Usuário:</label><br>
-        <input type="text" id="username" name="username"><br><br>
-        <label for="password">Senha:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <button type="submit">Login</button>
-    </form>
+    <div class="login-container">
+        <h1>Login</h1>
+        <form method="POST" action="{{ url_for('login') }}">
+            <label for="username">Usuário:</label>
+            <input type="text" id="username" name="username" autocomplete="username" required>
+            <label for="password">Senha:</label>
+            <input type="password" id="password" name="password" autocomplete="current-password" required>
+            <button type="submit">Login</button>
+        </form>
+    </div>
 </body>
 </html>
